6025 W22D4 agenda (night) [tiny bit behind]

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 9th</h1>
-            <h3>Week 22 Day 3 (Page Layouts - Day 1)</h3>
+            <h1>GDWD 105 - Agenda for April 10th</h1>
+            <h3>Week 22 Day 4 (Page Layouts - Day 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is a hobby you do in your free time?</li>
+                        <li>Do you see the glass as half empty or half full?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space ash-gray">
                         <img 
-                            src="images/cosplay.jpeg"
-                            alt="cosplay"
+                            src="images/good-day.webp"
+                            alt="good day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>CSS Fundamentals</li>
-                        <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
-                        <li><span class="type">Exercise</span>Product Showcase Site (?)</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 10</li>
+                        <li><span class="type">Exercise</span>Product Showcase Site</li>
+                        <li><span class="type">Exercise</span>Wiki with Sidebar</li>
                     </ul>
                 </div>
 
@@ -35,16 +35,17 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Showcase</span>Box Framing Project</li>
-                            <li><span class="type">Quiz</span>CSS Fundamentals</li>
-                            <li><span class="type">PowerPoint</span>Page Layouts - Single Column Layouts</li>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 10</li>
+                            <li><span class="type">Exercise</span>Product Showcase Site</li>
+                            <li><span class="type">PowerPoint</span>Page Layouts - Two Column Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Demo</span>Single Column Layouts</li>
+                            <li><span class="type">PowerPoint</span>Flexbox</li>
+                            <li><span class="type">Demo</span>Two Column Layouts (Flex)</li>
 
                         </ul>
                     </div>
@@ -52,8 +53,7 @@
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
-                            <li><span class="type">Exercise</span>Product Showcase Site</li>
+                            <li><span class="type">Exercise</span>Wiki with Sidebar</li>
                         </ul>
                     </div>
                 </div>
