--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 10th</h1>
-            <h3>Week 22 Day 4 (Page Layouts - Day 2)</h3>
+            <h1>GDWD 105 - Agenda for April 11th</h1>
+            <h3>Week 22 Day 5 (Page Layouts - Day 3)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Do you see the glass as half empty or half full?</li>
+                        <li>What was one of your favorite Saturday morning cartoons growing up?</li>
                     </ul>
-                    <div class="img-container more-space ash-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/good-day.webp"
-                            alt="good day"
+                            src="images/atla_cartoon.jpg"
+                            alt="avatar last airbender animals"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 10</li>
-                        <li><span class="type">Exercise</span>Product Showcase Site</li>
                         <li><span class="type">Exercise</span>Wiki with Sidebar</li>
+                        <li><span class="type">Exercise</span>Blog with Sidebar</li>
                     </ul>
                 </div>
 
@@ -35,17 +34,15 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 10</li>
-                            <li><span class="type">Exercise</span>Product Showcase Site</li>
-                            <li><span class="type">PowerPoint</span>Page Layouts - Two Column Layouts</li>
+                            <li><span class="type">Exercise</span>Wiki with Sidebar</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">PowerPoint</span>Flexbox</li>
-                            <li><span class="type">Demo</span>Two Column Layouts (Flex)</li>
+                            <li><span class="type">PowerPoint</span>CSS Grid</li>
+                            <li><span class="type">Demo</span>Two Column Layouts (Grid)</li>
 
                         </ul>
                     </div>
@@ -53,7 +50,8 @@
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Wiki with Sidebar</li>
+                            <li><span class="type">Demo</span>Two Column Layouts (Grid) [cont.]</li>
+                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
                         </ul>
                     </div>
                 </div>
