--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -34,6 +34,7 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
+                            <li><span class="type">Showcase</span>Product Showcase Site</li>
                             <li><span class="type">Exercise</span>Wiki with Sidebar</li>
                         </ul>
                     </div>
