6025 W23D1 agenda (half-day behind)

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 11th</h1>
-            <h3>Week 22 Day 5 (Page Layouts - Day 3)</h3>
+            <h1>GDWD 105 - Agenda for April 14th</h1>
+            <h3>Week 23 Day 1 (Page Layouts - Day 4)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What was one of your favorite Saturday morning cartoons growing up?</li>
+                        <li>What is one of your favorite Disney/Pixar movies?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-blue">
                         <img 
-                            src="images/atla_cartoon.jpg"
-                            alt="avatar last airbender animals"
+                            src="images/inside-out.jpg"
+                            alt="feelings"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Wiki with Sidebar</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 11</li>
                         <li><span class="type">Exercise</span>Blog with Sidebar</li>
+                        <li><span class="type">Exercise</span>MeTube</li>
                     </ul>
                 </div>
 
@@ -34,16 +35,15 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Showcase</span>Product Showcase Site</li>
-                            <li><span class="type">Exercise</span>Wiki with Sidebar</li>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 11</li>
+                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">PowerPoint</span>CSS Grid</li>
-                            <li><span class="type">Demo</span>Two Column Layouts (Grid)</li>
+                            <li><span class="type">Demo</span>Two Column Layouts (Mixed)</li>
 
                         </ul>
                     </div>
@@ -51,8 +51,8 @@
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Two Column Layouts (Grid) [cont.]</li>
-                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
+                            <li><span class="type">Demo</span>Two Column Layouts (Mixed) [cont.]</li>
+                            <li><span class="type">Exercise</span>MeTube</li>
                         </ul>
                     </div>
                 </div>
