6025 W23D5 agenda (night) [day behind]

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 14th</h1>
-            <h3>Week 23 Day 1 (Page Layouts - Day 4)</h3>
+            <h1>GDWD 105 - Agenda for April 15th</h1>
+            <h3>Week 23 Day 2 (Page Layouts - Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is one of your favorite Disney/Pixar movies?</li>
+                        <li>What is one of your favorite DreamWorks movies?</li>
                     </ul>
-                    <div class="img-container more-space dark-blue">
+                    <div class="img-container">
                         <img 
-                            src="images/inside-out.jpg"
-                            alt="feelings"
+                            src="images/httyd.jpg"
+                            alt="how to train your dragon"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 11</li>
-                        <li><span class="type">Exercise</span>Blog with Sidebar</li>
+                        <li><span class="type">Survey</span>Page Layout Session Wrap Up</li>
+                        <li><span class="type">Exercise</span>Flexbox Drills - Part 1</li>
+                        <li><span class="type">Exercise</span>CSS Grid Drills</li>
                         <li><span class="type">Exercise</span>MeTube</li>
                     </ul>
                 </div>
@@ -35,24 +36,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 11</li>
-                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
+                            <li><span class="type">Survey</span>Page Layout Session Wrap Up</li>
+                        <li><span class="type">Exercise</span>Flexbox Drills - Part 1</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Demo</span>Two Column Layouts (Mixed)</li>
-
+                            <li><span class="type">Exercise</span>CSS Grid Drills</li>
+                            <li><span class="type">Exercise</span>MeTube [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Two Column Layouts (Mixed) [cont.]</li>
-                            <li><span class="type">Exercise</span>MeTube</li>
+                            <li><span class="type">Exercise</span>MeTube [cont.]</li>
                         </ul>
                     </div>
                 </div>
