--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 15th</h1>
-            <h3>Week 23 Day 2 (Page Layouts - Day 5)</h3>
+            <h1>GDWD 105 - Agenda for April 16th</h1>
+            <h3>Week 23 Day 3 (Page Layouts - Day 6)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is one of your favorite DreamWorks movies?</li>
+                        <li>What is your favorite superhero movie or series? (if you have one)</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/httyd.jpg"
-                            alt="how to train your dragon"
+                            src="images/avengers.jpeg"
+                            alt="avengers"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>Page Layout Session Wrap Up</li>
-                        <li><span class="type">Exercise</span>Flexbox Drills - Part 1</li>
-                        <li><span class="type">Exercise</span>CSS Grid Drills</li>
-                        <li><span class="type">Exercise</span>MeTube</li>
+                        <li><span class="type">Project</span>"mebay" Product Page</li>
                     </ul>
                 </div>
 
@@ -36,23 +33,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>Page Layout Session Wrap Up</li>
-                        <li><span class="type">Exercise</span>Flexbox Drills - Part 1</li>
+                            <li><span class="type">Project</span>"mebay" Product Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
-                        <ul> 
-                            <li><span class="type">Exercise</span>CSS Grid Drills</li>
-                            <li><span class="type">Exercise</span>MeTube [cont.]</li>
+                        <ul>
+                            <li><span class="type">Project</span>"mebay" Product Page [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>MeTube [cont.]</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
+                            <li><span class="type">Project</span>"mebay" Product Page [cont.]</li>
                         </ul>
                     </div>
                 </div>
