--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 21st</h1>
-            <h3>Week 23 Day 5 (Content Layouts - Day 2)</h3>
+            <h1>GDWD 105 - Agenda for April 22nd</h1>
+            <h3>Week 24 Day 1 (Content Layouts - Day 3)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is a blocker that frequently prevents you from starting something?</li>
+                        <li>
+                            Would you rather have a pause or 
+                            rewind button in your life?
+                        </li>
                     </ul>
-                    <div class="img-container more-space light-teal">
-                        <img
-                            src="images/howaboutno.webp"
-                            alt="how about no"
+                    <div class="img-container more-space black">
+                        <img 
+                            src="images/rewind.png"
+                            alt="be kind, rewind"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Trek Cards</li>
-                        <li><span class="type">Exercise</span>Animagram Cards</li>
+                        <li><span class="type">Exercise</span>Pokemon Cards</li>
                     </ul>
                 </div>
 
@@ -34,22 +36,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Trek Cards</li>
-                            <li><span class="type">PowerPoint</span>Side by Side Content Layouts</li>
+                            <li><span class="type">Exercise</span>Pokemon Cards</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Side by Side Content Layouts</li>
+                            <li><span class="type">PowerPoint</span>Hero Content Layouts</li>
+                            <li><span class="type">Demo</span>Heroes Demo</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Animagram Cards</li>
+                            <li><span class="type">Demo</span>Heroes Demo [cont.]</li>
+                            <li><span class="type">Exercise</span>Three Heroes</li>
                         </ul>
                     </div>
                 </div>
