--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,28 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 25th</h1>
-            <h3>Week 24 Day 4 (Content Layouts - LAB DAY)</h3>
+            <h1>GDWD 105 - Agenda for April 28th</h1>
+            <h3>Week 24 Day 5 (Navigation & Responsiveness - Day 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        Would you rather be able to:
+                        Would you rather:
                         <ul>
-                            <li>eat anything you want in one meal a day for perfect nutrition?</li>
-                            <li>sleep for 1 hour and be perfectly rested?
+                            <li>spend a week trapped <b>outside</b> of your home?</li>
+                            <li>spend a week trapped <b>inside</b> of your home?</li>
                         </ul>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/power-nap.jpeg"
-                            alt="power nap"
+                            src="images/great-indoors.webp"
+                            alt="the great indoors"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>Content Layouts Session Wrap Up</li>
+                        <li><span class="type">Quiz</span>Content Layouts</li>
+                        <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
                     </ul>
                 </div>
 
@@ -37,22 +38,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Previous Project/Assignments</li>
+                            <li><span class="type">Quiz</span>Content Layouts</li>
+                            <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Extra Credit</li>
+                            <li><span class="type">PowerPoint</span>Navigation Layouts - Navbars</li>
+                            <li><span class="type">Demo</span>Navbars - Basic</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>Content Layouts Session Wrap Up</li>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Demo</span>Navbars - Basic [cont.]</li>
+                            <li><span class="type">Exercise</span>Client Navbars?</li>
                         </ul>
                     </div>
                 </div>
