--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,28 +7,28 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 29th</h1>
-            <h3>Week 25 Day 1 (Navigation & Responsiveness - Day 2)</h3>
+            <h1>GDWD 105 - Agenda for April 30th</h1>
+            <h3>Week 25 Day 2 (Navigation & Responsiveness - Day 3)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        Would you rather:
-                        <ul>
-                            <li>get an extra hour in every day, or</li>
-                            <li>get an extra day every 24 days?</li>
-                        </ul>
+                        <li>
+                            If you could have any creature (either real or fantastical)
+                            as a pet, what would you choose?
+                        </li>
+
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/melty-time.webp"
-                            alt="melty time"
+                            src="images/alt-animal-names.webp"
+                            alt="true names"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 12</li>
-                        <li><span class="type">Exercise</span>Client Navbars</li>
+                        <li><span class="type">Exercise</span>Media Queries</li>
+                        <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
                     </ul>
                 </div>
 
@@ -38,23 +38,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 12</li>
-                            <li><span class="type">Exercise</span>Client Navbars</li>
+                            <li><span class="type">Exercise</span>Media Queries</li>
+                            <li><span class="type">Demo</span>Media Queries and Responsiveness [Part 2]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Responsive Layouts</li>
-                            <li><span class="type">PowerPoint</span>Media Queries</li>
+                            <li><span class="type">Demo</span>Media Queries and Responsiveness [Part 2]</li>
+                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Media Queries and Responsiveness [Part 1]</li>
+                            <li><span class="type">Exercise</span>Modernizing George RR Martin [cont.]</li>
                         </ul>
                     </div>
                 </div>
