--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 1st</h1>
-            <h3>Week 25 Day 3 (Navigation & Responsiveness - Day 4)</h3>
+            <h1>GDWD 105 - Agenda for May 2nd</h1>
+            <h3>Week 25 Day 4 (Navigation & Responsiveness - Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather have the power of flight
-                            or the power to levitate objects?
+                            Would you rather have: a bag that could hold anything, or
+                            your own pocket-dimension accessed via suitcase?
                         </li>
                     </ul>
                     <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/broom-cats.jpg"
-                            alt="broom cats"
+                            src="images/hoarder-fox.webp"
+                            alt="hoarder fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Hover Galleries</li>
+                        <li><span class="type">Project</span>Dropdown Menu Site</li>
                     </ul>
                 </div>
 
@@ -36,23 +36,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Hiding and Showing Content</li>
+                            <li><span class="type">Powerpoint</span>Navigation Layouts - Dropdown Menus</li>
+                            <li><span class="type">Demo</span>Dropdown Menus</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Hiding and Showing Content [cont.]</li>
-                            <li><span class="type">Exercise</span>Hover Galleries</li>
+                            <li><span class="type">Demo</span>Dropdown Menus [cont.]</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Hover Galleries [cont.]</li>
-                            <li><span class="type">Project</span>Dropdown Menu Site</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site [cont.]</li>
                         </ul>
                     </div>
                 </div>
