--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -14,19 +14,19 @@
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather have: a bag that could hold anything, or
-                            your own pocket-dimension accessed via suitcase?
+                            Would you rather have a perfect photographic memory 
+                            or a perfect echoic memory?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
+                    <div class="img-container more-space blue-gray">
                         <img 
-                            src="images/hoarder-fox.webp"
-                            alt="hoarder fox"
+                            src="images/lab-fox.webp"
+                            alt="lab fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Dropdown Menu Site</li>
+                        <li><span class="type">Survey</span>CSS Navigation & Responsiveness Session Wrap Up</li>
                     </ul>
                 </div>
 
@@ -36,23 +36,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>Navigation Layouts - Dropdown Menus</li>
-                            <li><span class="type">Demo</span>Dropdown Menus</li>
+                            <li><span class="type">Lab Time</span>Past Assignments/Feedback</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Dropdown Menus [cont.]</li>
-                            <li><span class="type">Project</span>Dropdown Menu Site</li>
+                            <li><span class="type">Lab Time</span>Extra Credit - E-commerce Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Dropdown Menu Site [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study Hints</li>
+                            <li><span class="type">Survey</span>CSS Navigation & Responsiveness Session Wrap Up</li>
+                            
                         </ul>
                     </div>
                 </div>
