--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 2nd</h1>
-            <h3>Week 25 Day 4 (Navigation & Responsiveness - Day 5)</h3>
+            <h1>GDWD 105 - Agenda for May 5th</h1>
+            <h3>Week 25 Day 5 (Navigation & Responsiveness - LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
@@ -26,7 +26,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>CSS Navigation & Responsiveness Session Wrap Up</li>
+                        <li><span class="type">Survey</span>Navigation Layouts Session Wrap Up</li>
                     </ul>
                 </div>
 
@@ -51,7 +51,7 @@
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
                             <li><span class="type">Lab Time</span>Study Hints</li>
-                            <li><span class="type">Survey</span>CSS Navigation & Responsiveness Session Wrap Up</li>
+                            <li><span class="type">Survey</span>Navigation Layouts Session Wrap Up</li>
                             
                         </ul>
                     </div>
