--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,28 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 6th</h1>
-            <h3>Week 26 Day 1 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for May 7th</h1>
+            <h3>Week 26 Day 2 (FINALS WEEK)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather be magically gifted knowledge,
-                            wisdom, or strength?
-
+                            Are you able to nap during the day?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-blue-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/buns-of-steel.webp"
-                            alt="buns of steel"
+                            src="images/rest-day.jpeg"
+                            alt="rest day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Navigation and Responsiveness</li>
-                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
+                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page)</li>
                     </ul>
                 </div>
 
@@ -38,23 +35,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Navigation and Responsiveness</li>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
-                            
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
                         </ul>
                     </div>
                 </div>
