--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 7th</h1>
-            <h3>Week 26 Day 2 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for May 8th</h1>
+            <h3>Week 26 Day 3 (FINALS WEEK)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Are you able to nap during the day?
+                            Do you have a favorite sport (either to watch or to play)? 
+                            If so, what is it?
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/rest-day.jpeg"
-                            alt="rest day"
+                            src="images/fantasy-football.webp"
+                            alt="fantasy football"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page)</li>
+                        <li><span class="type">FINAL EVAL</span></li>
+                        <li><span class="type">Project</span>Restaurant Site (Complete)</li>
                     </ul>
                 </div>
 
@@ -33,23 +35,23 @@
                     <div class="wrapper">
                         <h3>Announcements (6pm-6:10pm)</h3>
 
-                        <h3>Period 1 (6:10pm-7:10pm)</h3>
+                        <h3>Period 1 (6:10pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page)</li>
+                            <li><span class="type">FINAL EVAL</span></li>
                         </ul>
                     </div>
-                    <h3 class="centered">Small Break (10min)</h3>
+                    <!-- <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
                             <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
                         </ul>
-                    </div>
+                    </div> -->
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 3 (9:15pm-11pm)</h3>
+                        <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
+                            <li><span class="type">Project</span>Restaurant Site (Complete)</li>
                         </ul>
                     </div>
                 </div>
