--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -37,6 +37,14 @@
                         <h3>Period 1 (6:10pm-8:30pm)</h3>
                         <ul>
                             <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
+                            <li><span class="type">Presenter</span>Kiayam</li>
+                            <li><span class="type">Presenter</span>Tommy</li>
+                            <li><span class="type">Presenter</span>Treasure</li>
+                            <li><span class="type">Presenter</span>Kiara</li>
+                            <li><span class="type">Presenter</span>Shealeen</li>
+                            <li><span class="type">Presenter</span>Xavion</li>
+                            <li><span class="type">Presenter</span>Tyler</li>
+                            <li><span class="type">Presenter</span>Blade</li>
                         </ul>
                     </div>
                     <!-- <h3 class="centered">Small Break (10min)</h3>
@@ -51,6 +59,13 @@
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
                             <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
+                            <li><span class="type">Presenter</span>Kayla</li>
+                            <li><span class="type">Presenter</span>Melissa</li>
+                            <li><span class="type">Presenter</span>Riah</li>
+                            <li><span class="type">Presenter</span>Spiritual</li>
+                            <li><span class="type">Presenter</span>Trelonda</li>
+                            <li><span class="type">Presenter</span>Brianna</li>
+                            <li><span class="type">Presenter</span>Jaylene</li>
                             <li><span class="type">Lab Time</span>Restaurant Site Revisions / Extra Credit</li>
                         </ul>
                     </div>
