--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -28,6 +28,7 @@
                     <ul>
                         <li><span class="type">FINAL EXAM</span></li>
                         <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                        <li><span class="type">Survey</span>Finals Week Wrap Up</li>
                         <li><span class="type">ANY REMAINING CODING ASSIGNMENTS</span></li>
                     </ul>
                 </div>
@@ -54,6 +55,7 @@
                         <ul>
                             <li><span class="type">PowerPoint</span>JavaScript Functions</li>
                             <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                            <li><span class="type">Survey</span>Finals Week Wrap Up</li>
                             <li><span class="type">Lab Time</span>Any Remaining Coding Assignments / Extra Credit</li>
                         </ul>
                     </div>
