--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,29 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 16th</h1>
-            <h3>Week 27 Day 4 (Career Services)</h3>
+            <h1>GDWD 105 - Agenda for May 19th</h1>
+            <h3>Week 27 Day 5 (Career Services)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Ideally, after graduation, would you prefer to freelance,
-                            or work at a more traditional full-time position? Or both?
+                            Which of your remaining classes are you most excited 
+                            for: Motion Graphics (106), Layout Design and Print (107), or
+                            the Portfolio course (108)?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-teal">
+                    <div class="img-container more-space final-black">
                         <img 
-                            src="images/borntocreate.webp"
-                            alt="born to create"
+                            src="images/finalday.jpg"
+                            alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Freelancing I: Proposals</li>
-                        <li><span class="type">Exercise</span>Freelancing II: Invoices</li>
+                        <li><span class="type">Survey</span>105 End of Course Survey</li>
+                        <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
+                        <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
                     </ul>
                 </div>
 
@@ -37,21 +39,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing</li>
+                            <li><span class="type">Survey</span>105 End of Course Survey</li>
+                            <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
+                            <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Freelancing I: Proposals</li>
+                            <li><span class="type">Project</span>Branded Resume - Complete (CS) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Freelancing II: Invoices</li>
+                            <li><span class="type">Project</span>Branded Resume - Complete (CS) [cont.]</li>
                         </ul>
                     </div>
                 </div>
